# cursor-telemetry

./: .editorconfig  .gitignore  .gitmodules  .prettierignore  .prettierrc  CHAT-ASSISTANT.md  CHAT-WIDGET-IMPLEMENTATION.md  DATABASE_SCHEMA.json  Procfile  README.md  START.bat  app.json  build.sh  dashboard-server.js  deploy-companion.sh  deploy.sh  docker-compose.yml  install-cursor-extension.sh  netlify.toml  package-lock.json  package.json  railway.json  railway.toml  render.yaml  run.sh  start-dashboard.sh  start_api.sh  start_dashboard.sh  test-prompt-capture.sh  test-refactored-dashboard.sh  test_export.html  test_privacy_modal.html  test_prompt.txt  update.sh  vercel.json
api/: README.md  openapi.yaml
clean-dashboard/: analytics-aggregator.js  chat-widget.html  chat-widget.js  dashboard.js  persistent-storage.js
components/activity-logger/companion/native/: .gitignore  Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json  test.js
components/activity-logger/companion/native/src/: lib.rs
config/: config.json
cursor-activity-logger/: DEPLOYMENT.md  FINAL_STATUS.md  MIGRATION_GUIDE.md  PRODUCTION_STATUS.md  README-DASHBOARD.md  build.sh  cursor-commands.md  debug-status.html  spa-integration.js  start.sh  test-companion.js  test-dashboard-integration.js  test-end-to-end.js  test-system.js
cursor-pkl-extension/: .gitignore  README.md  ast-intent-classifier.js  clio-intent-service.js  data-storage.js  kura-dashboard.css  live-dashboard-clean.html  package-lock.json  package.json  real-monitor.js  temp_sessions.json  tsconfig.json  (+2 more)
(+846 files in other folders)
