[package]
name = "cursor-telemetry-native"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# NAPI-RS for Node.js bindings
napi = "2.16"
napi-derive = "2.16"

# Diff algorithm (similar crate - fast line-by-line diffing)
similar = { version = "2.4", features = ["text"] }

# Fast text processing
memchr = "2.7"
regex = "1.10"

# Performance utilities
rayon = "1.8"  # Parallel processing
ahash = "0.8"   # Fast hashing

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
napi-build = "2.1"

[profile.release]
lto = true           # Link-time optimization
codegen-units = 1    # Better optimization
opt-level = 3        # Maximum optimization
strip = true         # Strip symbols
